--- a/.github/workflows/CI-API.yml
+++ b/.github/workflows/CI-API.yml
@@ -8,6 +8,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    
+  workflow_dispatch:
 
 jobs:
   build:
@@ -25,6 +27,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+        working-directory: './api'
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
