--- a/.github/workflows/CI-API.yml
+++ b/.github/workflows/CI-API.yml
@@ -13,7 +13,10 @@ on:
 
 jobs:
   build:
-
+    defaults:
+      run:
+        working-directory: './api'
+        
     runs-on: ubuntu-latest
 
     strategy:
