--- a/.github/workflows/CI-API.yml
+++ b/.github/workflows/CI-API.yml
@@ -21,13 +21,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      with: 
-        working-directory: './api'
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        working-directory: './api'
+        cache-dependency-path: ./api/package-lock.json
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
