--- a/.github/workflows/CI-API.yml
+++ b/.github/workflows/CI-API.yml
@@ -26,7 +26,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: ./api/package-lock.json
-    - run: npm install
-    - run: npm run build --if-present
-    - run: npm test
+        cache-dependency-path: ./api/package-lock.json 
+    - working-directory: ./app
+      run: npm ci
+    - working-directory: ./app
+      run: npm run build --if-present
+    - working-directory: ./app
+      run: npm test
