--- a/.github/workflows/CI-API.yml
+++ b/.github/workflows/CI-API.yml
@@ -27,9 +27,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: ./api/package-lock.json 
-    - working-directory: 'app'
+    - working-directory: 'api'
       run: npm ci
-    - working-directory: 'app'
+    - working-directory: 'api'
       run: npm run build --if-present
-    - working-directory: 'app'
+    - working-directory: 'api'
       run: npm test
