--- a/.github/workflows/CI-API.yml
+++ b/.github/workflows/CI-API.yml
@@ -11,6 +11,9 @@ on:
 
 jobs:
   build:
+    defaults:
+      run:
+        working-directory: 'api'
 
     runs-on: ubuntu-latest
 
@@ -27,9 +30,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: ./api/package-lock.json 
-    - working-directory: 'api'
-      run: npm ci
-    - working-directory: 'api'
-      run: npm run build --if-present
-    - working-directory: 'api'
-      run: npm test
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
