Update and rename jest-coverage-report.yml to run tests.yml

--- a/.github/workflows/run tests.yml
+++ b/.github/workflows/run tests.yml
@@ -19,3 +19,7 @@ jobs:
             - uses: ArtiomTr/jest-coverage-report-action@v2
               with:
                 working-directory: 'api'
+            - name: Install modules
+              run: yarn
+            - name: Run ESLint
+              run: eslint . --ext .js,.jsx,.ts,.tsx
