--- a/.github/workflows/run tests.yml
+++ b/.github/workflows/run tests.yml
@@ -20,3 +20,5 @@ jobs:
               with:
                 working-directory: 'api'
             - uses: stefanoeb/eslint-action@1.0.2
+              with:
+                files: api/
