--- a/.github/workflows/run tests.yml
+++ b/.github/workflows/run tests.yml
@@ -19,7 +19,5 @@ jobs:
             - uses: ArtiomTr/jest-coverage-report-action@v2
               with:
                 working-directory: 'api'
-            - name: Install modules
-              run: yarn
             - name: Run ESLint
-              run: eslint . --ext .js,.jsx,.ts,.tsxv2
+              run: npx eslint .
