--- a/.github/workflows/run tests.yml
+++ b/.github/workflows/run tests.yml
@@ -10,7 +10,7 @@ jobs:
     coverage:
         defaults:
           run:
-            working-directory: 'api'
+            working-directory: './api'
         
         runs-on: ubuntu-latest
         
@@ -19,7 +19,7 @@ jobs:
             - uses: ArtiomTr/jest-coverage-report-action@v2
               with:
                 working-directory: 'api'
-            - name: Run npx
+            - name: Install npm
               run: npm install
             - name: Run ESLint
-              run: npx eslint .
+              run: eslint .
