--- a/.github/workflows/run tests.yml
+++ b/.github/workflows/run tests.yml
@@ -22,4 +22,4 @@ jobs:
             - name: Install npm
               run: npm install eslint
             - name: Run ESLint
-              run: eslint .
+              run: npm eslint .
