--- a/.github/workflows/badges.yml
+++ b/.github/workflows/badges.yml
@@ -18,7 +18,7 @@ jobs:
       run:
         working-directory: 'api'
     
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
       - name: Checkout 🛎
