added docker and fixed env variables for npm start

--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,3 @@
-MONGO_URL = mongodb://127.0.0.1:27017
-DB_NAME = First-Application
+MONGO_URL=mongodb://127.0.0.1:27017
+DB_NAME=First-Application
+PORT=12345
