--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,5 @@
 MONGO_URL=mongodb://mongo-db:27017
-DB_NAME=First-Application
-PORT=3000
+DB_NAME=api
+DB_USERNAME=smajwloo
+DB_PASSWORD=password
+# MONGO_URL=mongodb://smajwloo:password@mongo-db:27017/
