--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,5 @@
-MONGO_URL=mongodb://mongo-db:27017
 DB_NAME=api
+DB_PORT=27017
 DB_USERNAME=smajwloo
 DB_PASSWORD=password
-# MONGO_URL=mongodb://smajwloo:password@mongo-db:27017/
+MONGO_URL=mongodb://smajwloo:password@mongo-db:27017
