--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   api:
-    build: ./api
+    build: ./
     image: smajwloo/end-project-api
     command: npm run dev
     ports:
@@ -12,7 +12,7 @@ services:
     environment:
       DATABASE_URL: mongodb://smajwloo:password@mongo-db:27017
   frontend:
-    build: ./frontend
+    build: ./
     image: smajwloo/end-project-frontend
     ports:
       - "8080:80"
