--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3.9"
 services:
   api:
     build:
-      context: ./api
-      dockerfile: ./api/Dockerfile
+      context: .
+      dockerfile: Dockerfile
     command: npm run dev
     ports:
       - "3000:3000"
@@ -16,7 +16,7 @@ services:
       DATABASE_URL: mongodb://smajwloo:password@mongo-db:27017
   frontend:
     build:
-      context: ./frontend
+      context: .
       dockerfile: Dockerfile
     ports:
       - "8080:80"
