--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3.9"
 services:
   api:
     build:
-      context: .
-      dockerfile: ./api/dockerfile
+      context: ./api/
+      dockerfile: dockerfile
     command: npm run dev
     ports:
       - "3000:3000"
@@ -16,8 +16,8 @@ services:
       DATABASE_URL: mongodb://smajwloo:password@mongo-db:27017
   frontend:
     build:
-      context: .
-      dockerfile: ./frontend/dockerfile
+      context: ./frontend/
+      dockerfile: dockerfile
     ports:
       - "8080:80"
     volumes:
