--- a/.github/workflows/run tests.yml
+++ b/.github/workflows/run tests.yml
@@ -18,4 +18,4 @@ jobs:
           - name: Jest coverage report
             uses: ArtiomTr/jest-coverage-report-action@v2.2.1-rc.0
             with:
-              working-directory: 'api'
+              working-directory: './api'
